syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.booking.proto";
option java_outer_classname = "BookingserviceProto";

service BookingService {
  rpc CheckAvailability(CheckAvailabilityRequest) returns (CheckAvailabilityResponse);
  rpc CheckSlotAvailability(CheckSlotAvailabilityRequest) returns (CheckSlotAvailabilityResponse);

}

message CheckAvailabilityRequest {
  int32 service_id = 1;
}

message CheckAvailabilityResponse {
  bool is_available = 1;
}

message CheckSlotAvailabilityRequest {
  int32 slot_id = 1;
}

message CheckSlotAvailabilityResponse {
  bool is_available = 1;
}